# duckdb-vector-index

./: .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  README.md  description.yml  extension_config.cmake
docs/plans/: 01-feat-unpin.md  02-feat-label-filter.md  03-lut-virtuals.md  04-backend-interface.md  05-aisaq-core.md  06-aisaq-label-integration.md  07-tests-bench.md  08-aisaq-vulkan.md  AISAQ.md
scripts/: analyze_profile.py  bootstrap.sh  peak_cpu.py
src/algo/: CMakeLists.txt
src/algo/aisaq/: CMakeLists.txt  aisaq_block_store.cpp  aisaq_block_store.hpp  aisaq_build.cpp  aisaq_build.hpp  aisaq_core.cpp  aisaq_core.hpp  aisaq_index.cpp  aisaq_index.hpp  aisaq_module.hpp  aisaq_plan.cpp  aisaq_pragmas.cpp  aisaq_register.cpp
src/algo/diskann/: diskann_core.cpp  diskann_index.cpp  diskann_index.hpp
src/algo/hnsw/: hnsw_core.cpp  hnsw_index.cpp  hnsw_index.hpp
src/algo/ivf/: ivf_index.cpp  ivf_index.hpp
src/algo/spann/: spann_index.cpp  spann_index.hpp
src/backend/: CMakeLists.txt  active_backend.hpp  backend.hpp  cpu_backend.cpp  cpu_backend.hpp
src/common/: CMakeLists.txt  optimize_scan.cpp  vamana.cpp  vector_index.cpp  vector_index_registry.cpp  vector_index_scan.cpp
src/include/vindex/: diskann_core.hpp  hnsw_core.hpp  label_filter.hpp  logging.hpp  pq_quantizer.hpp  quantizer.hpp  scann_quantizer.hpp  unaligned.hpp  vamana.hpp  vector_index.hpp  vector_index_scan.hpp
src/quant/pq/: pq_quantizer.cpp
src/quant/scann/: scann_quantizer.cpp
test/bench/: run_recall.py
test/sql/aisaq/: aisaq_basic.test  aisaq_errors.test  aisaq_filter.test  aisaq_filter_persist.test  aisaq_inline.test  aisaq_persist.test  aisaq_pq.test  aisaq_pragma.test  aisaq_ram_budget.test  aisaq_scann.test
test/sql/common/: combo_matrix.test  session_pragmas.test
test/unit/: CMakeLists.txt  test_aisaq_core.cpp  test_vamana_concurrency.cpp
